<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera App</string>
    <string name="nav_photo">Фото</string>
    <string name="nav_video">Видео</string>
    <string name="nav_gallery">Галерея</string>
    <string name="take_photo">Сделать фото</string>
    <string name="switch_camera">Переключить камеру</string>
    <string name="flash_mode">Режим вспышки</string>
    <string name="start_recording">Начать запись</string>
    <string name="stop_recording">Остановить запись</string>
    <string name="recording_time">Время записи</string>
    <string name="gallery_empty">Галерея пуста</string>
    <string name="gallery_empty_subtitle">Создайте фото или видео</string>
    <string name="delete_file">Удалить</string>
    <string name="photo_label">ФОТО</string>
    <string name="video_label">ВИДЕО</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="camera_permission_rationale">Для работы приложения необходим доступ к камере</string>
    <string name="storage_permission_rationale">Для сохранения фото и видео необходим доступ к хранилищу</string>
    <string name="grant_permission">Предоставить</string>
    <string name="error_camera_init">Ошибка инициализации камеры</string>
    <string name="error_save_file">Ошибка сохранения файла</string>
    <string name="photo_saved">Фото сохранено</string>
    <string name="video_saved">Видео сохранено</string>
    <string name="back">Назад</string>
    <string name="photo_preview">Просмотр фото</string>
    <string name="create_content">Создать</string>
</resources>
